# financial-indicator-screener

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_e2e_setup.md  PROMPT_plan.md  akshare使用方案.md  loop.sh  pyproject.toml  start.sh
e2e/: api_cache.feature  api_company.feature  api_formula_crud.feature  api_formula_evaluation.feature  api_formula_validation.feature  api_industry.feature  api_metrics.feature  api_request_logging.feature  api_saved_screens.feature  api_screening.feature  api_validation.feature  backend_logging.feature  cache_management.feature  cache_refresh.feature  company_details.feature  condition_visualization.feature  custom_formula_editor.feature  custom_formula_screening.feature  data_fetch_logging.feature  disclosure_dates.feature  edge_case_handling.feature  error_handling.feature  error_logging.feature  formula_editor.feature  formula_screening.feature  industry_classification.feature  industry_filtering.feature  industry_screening.feature  log_levels.feature  loss_companies.feature  missing_data.feature  peer_comparison.feature  request_tracing.feature  saved_screens.feature  screen_companies.feature  screening.feature  sensitive_data.feature  slow_request_alerts.feature  sort_results.feature  sorting.feature  (+7 more)
specs/: 00_overview.md  01_core_jobs.md  02_data_source.md  02_financial_metrics.md  03_technical_architecture.md  04_frontend.md  04_technical_architecture.md  05_backend.md  05_frontend.md  06_backend.md  06_ux.md  07_custom_formula.md  08_edge_cases.md  09_industry_comparison.md  10_industry_comparison.md  (+4 more)
(+112 files in other folders)
