[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "akshare>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
pythonpath = ["src/backend"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"
